--- a/render.yaml
+++ b/render.yaml
@@ -3,11 +3,12 @@ services:
     name: tssezl-app
     env: node
     plan: free
-    buildCommand: cd frontend && npm install && npm run build
-    startCommand: cd backend && npm install && node server.js
+    buildCommand: |
+      cd invoice-frontend && npm install && npm run build
+      cd ../backend && npm install
+    startCommand: cd backend && node server.js
     envVars:
       - key: MONGO_URI
         value: mongodb+srv://parthkumar157:P@rth157@cluster0.vkbn5fk.mongodb.net/invoice-system?retryWrites=true&w=majority&appName=Cluster0
       - key: JWT_SECRET
         value: yourSecretKey
-    staticPublishPath: frontend/build
