--- a/backend/package.json
+++ b/backend/package.json
@@ -14,5 +14,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.8.7",
     "multer": "^1.4.5-lts.1"
-  }
+  },
+  "engines": {
+  "node": "20.x"
 }
+}
+
