Fix: Downgraded mongoose to v7.6.0 to fix Render build error

--- a/render.yaml
+++ b/render.yaml
@@ -5,10 +5,10 @@ services:
     plan: free
     buildCommand: |
       cd invoice-frontend && npm install && npm run build
-      cd ../backend && rm -rf node_modules package-lock.json && npm install
-    startCommand: cd backend && npm start
+      cd ../backend && npm install
+    startCommand: cd backend && node server.js
     envVars:
       - key: MONGO_URI
-        value: mongodb+srv://parthkumar157:P%40rth157@cluster0.vkbn5fk.mongodb.net/invoice-system?retryWrites=true&w=majority&appName=Cluster0
+        value: mongodb+srv://parthkumar157:P@rth157@cluster0.vkbn5fk.mongodb.net/invoice-system?retryWrites=true&w=majority&appName=Cluster0
       - key: JWT_SECRET
         value: yourSecretKey
