Ready for deployment

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb+srv://parthkumar157:P%40rth157@cluster0.vkbn5fk.mongodb.net/invoice-system?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://parthkumar157:P%40rth157@cluster0.vkbn5fk.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=yourSecretKey
